--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Jetbrain Rider Cache
+/.idea/
+/Assets/Plugins/
+/Assets/Plugins.meta
